--- a/d-/styl/btn.styl
+++ b/d-/styl/btn.styl
@@ -23,8 +23,8 @@
 .{$pf}btn:after{
     content: "";
     position: absolute;
-    top: -$btn-hot-area;
-    bottom: -$btn-hot-area;
+    top: -$btn-top;
+    bottom: -$btn-top;
     left: 0;
     right: 0;
 }
@@ -62,7 +62,6 @@
     border-radius:$btn-lg-border-radius;
 }
 
-// .{$pf}btn:not(.disabled):not(:disabled):active,
 .{$pf}btn-lg:not(.disabled):not(:disabled):active,
 .{$pf}btn-lg.active,
 .{$pf}btn-s:not(.disabled):not(:disabled):active,
