--- a/d-/styl/flex.styl
+++ b/d-/styl/flex.styl
@@ -2,7 +2,7 @@
 .{$pf}flex-box{
   width: 100%;
   -webkit-box-sizing: border-box;
-  min-height: 2.2rem;
+  min-height: $height-44;
   display: -webkit-box;
   display: -webkit-flex; 
   display: flex; 
@@ -101,6 +101,8 @@
 
 .{$pf}flex-col-50 {
   width: 50%; }
+  .{$pf}flex-col-60 {
+  width: 60%; }
 
 .{$pf}flex-col-67 {
   width: 66.6666%; }
