--- a/d-/styl/nowrap.styl
+++ b/d-/styl/nowrap.styl
@@ -32,3 +32,27 @@
     -webkit-box-orient: vertical;
     -webkit-line-clamp: 3;
 }
+
+.{$pf}nowrap-1{
+    display: -webkit-box;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 1;
+    -webkit-box-flex: 1;
+    height: inherit;
+}
+.{$pf}nowrap-2{
+    display: -webkit-box;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
+}
+.{$pf}nowrap-3{
+    display: -webkit-box;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 3;
+}
