--- a/d-/styl/progress.styl
+++ b/d-/styl/progress.styl
@@ -5,7 +5,7 @@
   font-size: 0px;
   background-color: #e2e2e2;
   box-sizing: border-box; 
-  margin:5px 0px;}
+  margin:$margin-5 0;}
 
 .{$pf}progress .{$pf}progress-inner-50 {
   display: block;
