--- a/d-/styl/variable.styl
+++ b/d-/styl/variable.styl
@@ -8,7 +8,80 @@ $border-t=-webkit-gradient(linear, left bottom, left top, color-stop(.5, rgba(0,
 $border-b=-webkit-gradient(linear, left top, left bottom, color-stop(.5, rgba(0, 0, 0, 0)), color-stop(.5, $bordercolor), to($bordercolor));
 $border-l=-webkit-gradient(linear, right top, left top, color-stop(.5, rgba(0, 0, 0, 0)), color-stop(.5, $bordercolor), to($bordercolor));
 $border-r=-webkit-gradient(linear, left top, right top, color-stop(.5, rgba(0, 0, 0, 0)), color-stop(.5, $bordercolor), to($bordercolor));
-$text-color=#ffffff;
+$txt-color-f=#ffffff;
+
+/*宽度*/
+$width-8=0.4rem;
+$width-14=0.7rem;
+$width-20=1rem;
+$width-24=1.2rem;
+$width-25=1.25rem;
+$width-26=1.3rem;
+$width-28=1.4rem;
+$width-30=1.5rem;
+$width-32=1.6rem;
+$width-50=2.5rem;
+$width-55=2.75rem;
+$width-80=4rem;
+$width-100=5rem;
+$width-120=6rem;
+$width-270=13.5rem;
+
+/*高度*/
+$height-13=0.65rem;
+$height-14=0.7rem;
+$height-16=0.8rem;
+$height-18=0.9rem;
+$height-20=1rem;
+$height-24=1.2rem;
+$height-25=1.25rem;
+$height-26=1.3rem;
+$height-30=1.5rem;
+$height-40=2rem;
+$height-42=2.1rem;
+$height-50=2.5rem;
+$height-44=2.2rem;
+$height-45=2.25rem;
+$height-65=3.25rem;
+$height-71=3.55rem;
+$height-80=4rem;
+$height-100=5rem;
+$height-120=6rem;
+
+/*圆角*/
+$boeder-r-200=10rem;
+$boeder-r-2=0.1rem;
+$boeder-r-3=0.15rem;
+$boeder-r-5=0.25rem;
+$boeder-r-6=0.3rem;
+$boeder-r-7=0.35rem;
+$boeder-r-8=0.4rem;
+$boeder-r-10=0.5rem;
+$boeder-r-13=0.65rem;
+$boeder-r-15=0.75rem;
+
+/*margin*/
+$margin-1=0.05rem;
+$margin-2=0.1rem;
+$margin-3=0.15rem;
+$margin-5=0.25rem;
+$margin-8=0.4rem;
+$margin-10=0.5rem;
+$margin-11=0.55rem;
+$margin-15=0.75rem;
+$margin-18=0.9rem;
+$margin-20=1rem;
+$margin-24=1.2rem;
+$margin-50=2.5rem;
+/*定位*/
+$top-6=0.3rem;
+$top-8=0.4rem;
+$left-3=0.15rem;
+$left-6=0.3rem;
+$left-10=0.5rem;
+$right-5=0.25rem;
+$bottom-3=0.15rem;
+
 
 /*字体颜色*/
 $txt-default=#000;
@@ -20,26 +93,26 @@ $txt-link=#00a5e0;
 $txt-feeds=#314c83;
 
 /*字体大小*/
+$font-size-18=0.9rem;
+$font-size-19=0.85rem;
+$font-size-16=0.8rem;
+$font-size-15=0.75rem;
+$font-size-14=0.7rem;
+$font-size-13=0.65rem;
+$font-size-12=0.6rem;
+$font-size-10=0.5rem;
+/* nav 背景色*/
+$header-bg-orange=#ff7f00;
+$header-bg-blue=#18b4ed;
 
-$font-size-base=0.8rem;
-$font-size-h1=0.9rem;
-$font-size-title-lg=0.85rem;
-$font-size-sub=0.7rem;
-$font-size-tips=0.6rem;
-
-/*圆角*/
-
-$border-radius-base=0.2rem;
-$border-radius-lg=0.4rem;
-$border-radius-max=10rem;
 
 /*btn*/
 
 $btn-padding=0 0.55rem;
 $btn-min-width=2.75rem;
-$btn-size=15px;
-$btn-border-radius=3px;
-$btn-hot-area=7px;
+$btn-size=0.75rem;
+$btn-border-radius=0.15rem;
+$btn-top=0.35rem;
 $btn-bg-color=#fdfdfd;
 $btn-bg-image=-webkit-gradient(linear,left top, left bottom, color-stop(0.5, #fff), to(#fafafa));
 $btn-text=rgb(0,165,224);
