--- a/d-/css/avatar.css
+++ b/d-/css/avatar.css
@@ -8,17 +8,22 @@
   display: block;
   -webkit-background-size: cover;
   -webkit-border-radius: 10rem;
+  border-radius: 10rem;
+  background-size: cover;
   overflow: hidden;
 }
 .d-avatar-s-50 {
   display: block;
   -webkit-background-size: cover;
+  border-radius: 10rem;
+  background-size: cover;
   width: 2.5rem;
   height: 2.5rem;
 }
 .d-avatar-s-80 {
   display: block;
   -webkit-background-size: cover;
+  background-size: cover;
   width: 4rem;
   height: 4rem;
 }
@@ -45,6 +50,8 @@
   background-repeat: no-repeat;
   -webkit-background-size: cover;
   -webkit-border-radius: 10rem;
+  border-radius: 10rem;
+  background-size: cover;
 }
 .d-avatar-80 {
   width: 4rem;
