--- a/d-/css/basics.css
+++ b/d-/css/basics.css
@@ -25,6 +25,9 @@
 .d-margin-r-10 {
   margin-right: 0.5rem;
 }
+.d-margin-r-20 {
+  margin-right: 1rem;
+}
 .d-margin-t-50 {
   margin-top: 2.5rem;
 }
@@ -33,6 +36,12 @@
 }
 .d-margin-t-5 {
   margin-top: 0.25rem;
+}
+.d-margin-b-10 {
+  margin-bottom: 0.5rem;
+}
+.d-margin-tb-10 {
+  margin: 0.5rem 0;
 }
 .d-margin-r-1 {
   margin-right: 0.05rem;
@@ -51,6 +60,9 @@
 }
 .d-padding-l-10 {
   padding-left: 0.5rem;
+}
+.d-padding-r-3 {
+  padding-right: 0.15rem;
 }
 .d-padding-r-0 {
   padding-right: 0;
@@ -74,10 +86,10 @@
   padding: 0.5rem 0;
 }
 .d-width-8 {
-  width: 8px !important;
+  width: 0.4rem !important;
 }
 .d-width-20 {
-  width: 20px;
+  width: 1rem;
 }
 .d-fill {
   object-fit: fill;
@@ -119,6 +131,27 @@
 }
 .d-position-more {
   position: absolute;
-  bottom: 0.5rem;
-  left: 31%;
+  bottom: 0.45rem;
+  left: 29%;
+}
+.d-b-radius-10 {
+  -webkit-border-radius: 0.5rem !important;
+  border-radius: 0.5rem !important;
+}
+.d-rec {
+  border-left: 0.15rem solid #ff7f00;
+  padding-left: 0.25rem;
+  margin-bottom: 0.5rem;
+}
+.d-p-left-58 {
+  left: 58% !important;
+}
+.d-txt-orange {
+  color: #ff7f00;
+}
+.d-tip {
+  font-weight: bold;
+}
+.d-bg-f {
+  background-color: #fff;
 }
