--- a/d-/css/card.css
+++ b/d-/css/card.css
@@ -3,7 +3,7 @@
   overflow: hidden;
   margin: 0.5rem 0.5rem 1rem 0.5rem;
   background-color: #fff;
-  border-radius: 2px;
+  border-radius: 0.1rem;
 }
 .d-card-image img {
   width: 100%;
