--- a/d-/css/dialog.css
+++ b/d-/css/dialog.css
@@ -42,10 +42,10 @@
   line-height: 1.3rem;
 }
 .d-dialog-content {
-  min-height: 71px;
-  border-top-left-radius: 6px;
-  border-top-right-radius: 6px;
-  padding: 18px;
+  min-height: 3.55rem;
+  border-top-left-radius: 0.3rem;
+  border-top-right-radius: 0.3rem;
+  padding: 0.9rem;
   display: -webkit-box;
   display: box;
   -webkit-box-pack: center;
@@ -53,8 +53,8 @@
   -webkit-box-orient: vertical;
 }
 .d-dialog-footer {
-  border-bottom-left-radius: 6px;
-  border-bottom-right-radius: 6px;
+  border-bottom-left-radius: 0.3rem;
+  border-bottom-right-radius: 0.3rem;
   display: -webkit-box;
   width: 100%;
   box-sizing: border-box;
