--- a/d-/css/loading.css
+++ b/d-/css/loading.css
@@ -3,7 +3,7 @@
   height: 20px;
   display: block;
   background-image: url("../img/loading_sprite.png");
-  -webkit-background-size: auto 20px;
+  -webkit-background-size: auto 1rem;
   -webkit-animation: rotate 1s steps(12) infinite;
 }
 @-webkit-keyframes rotate {
@@ -35,8 +35,8 @@
   -webkit-box-orient: horizontal;
 }
 .d-loading-box {
-  top: 0px;
-  left: 0px;
+  top: 0;
+  left: 0;
   width: 6rem;
   height: 5rem;
   z-index: 999;
@@ -48,7 +48,7 @@
   -webkit-box-pack: center;
   background: rgba(0,0,0,0.65);
   color: #fff;
-  border-radius: 6px;
+  border-radius: 0.3rem;
 }
 @-webkit-keyframes rotate2 {
   from {
