--- a/d-/css/search.css
+++ b/d-/css/search.css
@@ -29,12 +29,13 @@
   border: 0px;
   outline: none;
   padding-left: 1rem;
+  color: #333;
 }
 .d-search .cancel {
   font-size: 0.7rem;
   color: #666;
   margin-right: -2.2rem;
-  width: 2.2rem;
+  width: $width-44;
   height: 1.5rem;
   line-height: 1.5rem;
   -webkit-transition: all 0.3s;
