--- a/d-/css/shadow.css
+++ b/d-/css/shadow.css
@@ -1,25 +1,25 @@
 .d-shadow-1 {
-  -webkit-box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12);
-  -moz-box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12);
-  box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12);
+  -webkit-box-shadow: 0 0.1rem 0.25rem 0 rgba(0,0,0,0.16), 0 0.1rem 0.5rem 0 rgba(0,0,0,0.12);
+  -moz-box-shadow: 0 0.1rem 0.25rem 0 rgba(0,0,0,0.16), 0 0.1rem 0.5rem 0 rgba(0,0,0,0.12);
+  box-shadow: 0 0.1rem 0.25rem 0 rgba(0,0,0,0.16), 0 0.1rem 0.5rem 0 rgba(0,0,0,0.12);
 }
 .d-shadow-2 {
-  webkit-box-shadow: 0 8px 17px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
-  -moz-box-shadow: 0 8px 17px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
-  box-shadow: 0 8px 17px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+  webkit-box-shadow: 0 0.4rem 0.85rem 0 rgba(0,0,0,0.2), 0 0.3rem 1rem 0 rgba(0,0,0,0.19);
+  -moz-box-shadow: 0 0.4rem 0.85rem 0 rgba(0,0,0,0.2), 0 0.3rem 1rem 0 rgba(0,0,0,0.19);
+  box-shadow: 0 0.4rem 0.85rem 0 rgba(0,0,0,0.2), 0 0.3rem 1rem 0 rgba(0,0,0,0.19);
 }
 .d-shadow-3 {
-  -webkit-box-shadow: 0 12px 15px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
-  -moz-box-shadow: 0 12px 15px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
-  box-shadow: 0 12px 15px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+  -webkit-box-shadow: 0 0.6rem 0.75rem 0 rgba(0,0,0,0.24), 0 0.85rem 2.5rem 0 rgba(0,0,0,0.19);
+  -moz-box-shadow: 0 0.6rem 0.75rem 0 rgba(0,0,0,0.24), 0 0.85rem 2.5rem 0 rgba(0,0,0,0.19);
+  box-shadow: 0 0.6rem 0.75rem 0 rgba(0,0,0,0.24), 0 0.85rem 2.5rem 0 rgba(0,0,0,0.19);
 }
 .d-shadow-4 {
-  -webkit-box-shadow: 0 16px 28px 0 rgba(0,0,0,0.22), 0 25px 55px 0 rgba(0,0,0,0.21);
-  -moz-box-shadow: 0 16px 28px 0 rgba(0,0,0,0.22), 0 25px 55px 0 rgba(0,0,0,0.21);
-  box-shadow: 0 16px 28px 0 rgba(0,0,0,0.22), 0 25px 55px 0 rgba(0,0,0,0.21);
+  -webkit-box-shadow: 0 0.8rem 1.4rem 0 rgba(0,0,0,0.22), 0 0.25rem 2.75rem 0 rgba(0,0,0,0.21);
+  -moz-box-shadow: 0 0.8rem 1.4rem 0 rgba(0,0,0,0.22), 0 0.25rem 2.75rem 0 rgba(0,0,0,0.21);
+  box-shadow: 0 0.8rem 1.4rem 0 rgba(0,0,0,0.22), 0 0.25rem 2.75rem 0 rgba(0,0,0,0.21);
 }
 .d-shadow-5 {
-  -webkit-box-shadow: 0 27px 24px 0 rgba(0,0,0,0.2), 0 40px 77px 0 rgba(0,0,0,0.22);
-  -moz-box-shadow: 0 27px 24px 0 rgba(0,0,0,0.2), 0 40px 77px 0 rgba(0,0,0,0.22);
-  box-shadow: 0 27px 24px 0 rgba(0,0,0,0.2), 0 40px 77px 0 rgba(0,0,0,0.22);
+  -webkit-box-shadow: 0 1.35rem 0.2rem 0 rgba(0,0,0,0.2), 0 2rem 3.85rem 0 rgba(0,0,0,0.22);
+  -moz-box-shadow: 0 1.35rem 0.2rem 0 rgba(0,0,0,0.2), 0 2rem 3.85rem 0 rgba(0,0,0,0.22);
+  box-shadow: 0 1.35rem 0.2rem 0 rgba(0,0,0,0.2), 0 2rem 3.85rem 0 rgba(0,0,0,0.22);
 }
