--- a/d-/css/tag.css
+++ b/d-/css/tag.css
@@ -8,30 +8,30 @@
 }
 .d-tag {
   position: relative;
-  padding: 3px;
+  padding: 0.15rem;
   box-sizing: border-box;
 }
 .d-tag:before {
   position: absolute;
-  font-size: 10px;
-  width: 28px;
-  height: 13px;
-  line-height: 13px;
+  font-size: 0.5rem;
+  width: $height-28;
+  height: 0.65rem;
+  line-height: 0.65rem;
   z-index: 9;
   text-align: center;
 }
 .d-tag-b-r:before {
   position: absolute;
-  bottom: 3px;
-  right: 3px;
+  bottom: 0.15rem;
+  right: 0.15rem;
   color: #fff;
   background-color: #5fb336;
   content: '免费';
 }
 .d-tag-b-l:before {
   position: absolute;
-  bottom: 3px;
-  left: 3px;
+  bottom: 0.15rem;
+  left: 0.15rem;
   color: #fff;
   background-color: #5fb336;
   content: '免费';
@@ -39,16 +39,16 @@
 }
 .d-tag-t-r:before {
   position: absolute;
-  top: 3px;
-  right: 3px;
+  top: 0.15rem;
+  right: 0.15rem;
   color: #fff;
   background-color: #5fb336;
   content: '免费';
 }
 .d-tag-t-l:before {
   position: absolute;
-  top: 3px;
-  left: 3px;
+  top: 0.15rem;
+  left: 0.15rem;
   color: #fff;
   background-color: #5fb336;
   content: '免费';
