--- a/d-/styl/avatar.styl
+++ b/d-/styl/avatar.styl
@@ -2,35 +2,40 @@
 .avatar{
   display: block;
   -webkit-background-size: cover;
-  -webkit-border-radius: 10rem;
+  -webkit-border-radius:$boeder-r-200;
+  border-radius:$boeder-r-200;
+  background-size:cover;
   overflow: hidden;
 }
 .{$pf}avatar-s-50{
   display: block;
   -webkit-background-size: cover;
-   width: 2.5rem;
-  height: 2.5rem;
+  border-radius:$boeder-r-200;
+  background-size:cover;
+   width:$width-50;
+  height: $height-50;
 }
 .{$pf}avatar-s-80{
   display: block;
   -webkit-background-size: cover;
-   width: 4rem;
-  height: 4rem;
+  background-size:cover;
+   width:$width-80;
+  height: $height-80;
 }
 .{$pf}avatar-50{
   @extend .avatar
-   width: 2.5rem;
-  height: 2.5rem;
+  width:$width-50;
+  height:$height-50;
 }
 .{$pf}avatar-30{
   @extend .avatar
-   width: 1.5rem;
-  height: 1.5rem;
+   width: $width-30;
+  height: $height-30;
 }
 .{$pf}avatar-25{
   @extend .avatar
-   width: 1.25rem;
-  height: 1.25rem;
+   width: $width-25;
+  height: $height-25;
 }
 .{$pf}avatar-50 > span,.{$pf}avatar-80 > span,.{$pf}avatar-100 > span,.{$pf}avatar-120 > span {
     width: 100%;
@@ -39,20 +44,22 @@
     overflow: hidden;
     background-repeat: no-repeat;
     -webkit-background-size: cover;
-    -webkit-border-radius: 10rem; 
+    -webkit-border-radius: $boeder-r-200; 
+    border-radius:$boeder-r-200;
+    background-size:cover;
 }
 .{$pf}avatar-80{
    @extend .avatar
-  width:4rem;
-  height:4rem;
+  width:$width-80;
+  height:$height-80;
 }
 .{$pf}avatar-100{
    @extend .avatar
-  width:5rem;
-  height:5rem;
+  width:$width-100;
+  height:$height-100;
 }
 .{$pf}avatar-120{
    @extend .avatar
-  width:6rem;
-  height:6rem;
+  width:$width-120;
+  height:$height-120;
 }
