--- a/d-/styl/header.styl
+++ b/d-/styl/header.styl
@@ -20,9 +20,9 @@
     right: 0;
     left: 0;
     z-index: 10;
-    height: 2.2rem;
-    line-height 2.2rem
-    background-color: #18b4ed;
+    height:$height-45;
+    line-height $height-45;
+    background-color: $header-bg-orange;
     color:#fff;
     display -webkit-box;
     display -webkit-flex;
@@ -38,17 +38,16 @@
 	width:100%
 }
 .{$pf}nav button{
-	// height: 1.5rem;
-    line-height: 1.3rem;
-    min-width: 2.75rem; 
+    line-height:$height-26;
+    min-width: $width-55; 
     text-align: center;
-    font-size: 15px;
+    font-size: $font-size-15;
     background-color: #fdfdfd;
     color: #00a5e0;
     -webkit-box-sizing: border-box;
     background-clip: padding-box;
   	 border: 0;
-    border-radius: 3px;
+    border-radius: $boeder-r-3;
      position:relative;
     
 }
@@ -78,14 +77,15 @@
     position: absolute;
     top: 0;
     left: 51%;
-    font-size: 0.5rem;
+    font-size: $font-size-10;
     color: #fff;
     background-color: #ff2600;
-    border-radius: 0.4rem;
+    border-radius: $boeder-r-8;
     display: inline-block;
-    // height: 0.8rem;
     padding: 0 0.125rem;
-    line-height: 0.8rem;
+    line-height: $height-16;
+    height:$height-16;
+    width:$height-16
     text-align: center;
 }
 
@@ -94,8 +94,8 @@
     right: 0;
     left: 0;
     z-index: 10;
-    height: 2.2rem;
-    line-height 2.2rem
+    height: $height-44;
+    line-height $height-44;
     background-color: #18b4ed;
     color:#fff;
     display -webkit-box;
@@ -107,16 +107,16 @@
 }
 
 .{$pf}nav-btn button{
-     line-height: 1.3rem;
-    min-width: 2.75rem; 
+     line-height:$height-26;
+    min-width:$width-55; 
     text-align: center;
-    font-size: 15px;
+    font-size: $font-size-15;
     -webkit-box-sizing: border-box;
     background-clip: padding-box;
      position:relative;  
     background-color: #18b4ed !important;
     color: #fdfdfd !important;
-      border: 1px solid #fff;
+    border: 1px solid #fff;
     
 }
 .{$pf}nav-r{
@@ -124,16 +124,16 @@
 }
 .{$pf}btn-nav-l{   
     border-right: 0 !important;
-    border-bottom-left-radius: 0.75rem !important;
-    border-top-left-radius: 0.75rem !important;  
+    border-bottom-left-radius: $boeder-r-15 !important;
+    border-top-left-radius: $boeder-r-15 !important;  
 }
 .{$pf}btn-nav-r{    
-    border-bottom-right-radius: 0.75rem !important;
-    border-top-right-radius: 0.75rem !important;
+    border-bottom-right-radius: $boeder-r-15 !important;
+    border-top-right-radius: $boeder-r-15 !important;
 }
 .{$pf}btn-nav-img{
-  position: absolute;
-    left: 10px;   
+    position: absolute;
+    left: $left-10;   
 }
 .{$pf}nav-btn button:active{
     background-color:#fdfdfd !important;
