--- a/d-/styl/label.styl
+++ b/d-/styl/label.styl
@@ -10,22 +10,22 @@
 	text-align: center;
 	white-space: nowrap;
 	vertical-align: baseline;/*默认。元素放置在父元素的基线上。*/
-	border-radius: 0.15rem;
+	border-radius:$boeder-r-3;
 }
 .{$pf}label-primary {
-	_label_($text-color,#00bcd4);
+	_label_($txt-color-f,#00bcd4);
 }
 .{$pf}label-success {
-	_label_($text-color,#009688);
+	_label_($txt-color-f,#009688);
 }
 .{$pf}label-info {
-	_label_($text-color,#03a9f4);
+	_label_($txt-color-f,#03a9f4);
 }
 .{$pf}label-warning {
-	_label_($text-color,#ffc107);
+	_label_($txt-color-f,#ffc107);
 }
 .{$pf}label-danger {
-	_label_($text-color,#e51c23);
+	_label_($txt-color-f,#e51c23);
 }
 .{$pf}label-outlined {
 	border: 1px solid #d9d9d9;
@@ -47,5 +47,5 @@
 	_label_outline(#e51c23)
 }
 .{$pf}label .{$pf}iconfont {
-	font-size: 0.6rem;
+	font-size: $font-size-12;
 }
