--- a/d-/styl/search.styl
+++ b/d-/styl/search.styl
@@ -3,46 +3,45 @@
 	display: -webkit-box;
     -webkit-box-pack: center;/*子元素水平对齐方式*/
     -webkit-box-align: center;/*子元素垂直对齐方式*/
-    height: 2.2rem;
+    height:$height-44;
     overflow: hidden;
     width: 100%;
-    // background-color: #ebeced;
-    // color: #9e9e9e;
     -webkit-backface-visibility: hidden;/*隐藏被旋转的 div 元素的背面：*/
     backface-visibility: hidden;
 	}
 	
 .{$pf}search-box{
-		margin: 0 0.5rem;
+		margin: 0 $margin-10;
     background-color: #ffffff;
-    border-radius: 0.25rem;
-    height: 1.5rem;
-    line-height: 1.5rem;
-    font-size: 0.7rem;
+    border-radius: $boeder-r-5;
+    height: $height-30;
+    line-height: $height-30;
+    font-size: $font-size-14;
     width: 100%;
     position: relative;
-    padding:0 0.5rem;
+    padding:0 $margin-10;
     display: -webkit-box;
     -webkit-box-flex: 1;
     box-sizing: border-box;
 
 	}
 .{$pf}search-box input{
-	        width:99%;
+	   width:99%;
 			display: -webkit-box;
 			background: #fff;
 			border:0px;	
 			outline: none;
-			padding-left:1rem;
+			padding-left:$margin-20;
+      color:#333;
 	}
 	
 .{$pf}search .cancel{
-		font-size: 0.7rem;
+		font-size:$font-size-14;
 	    color: #666666;
 	    margin-right: -2.2rem;
-	    width: 2.2rem;
-	    height: 1.5rem;
-	    line-height: 1.5rem;
+	    width: $width-44;
+	    height:$height-30;
+	    line-height: $height-30;
 	    -webkit-transition: all .3s;
 	    transition: all .3s;
 }
