--- a/d-/styl/tab.styl
+++ b/d-/styl/tab.styl
@@ -10,26 +10,20 @@
 	display:flex;
 	box-sizing border-box;
 	background-color #fff;
-	height 45px;
+	height $height-45;
 }
 .{$pf}tab-nav li{
 	display-flex:1;
 	width 100%;
 	text-align center;
-	height:45px;
-	line-height:45px;
+	height:$height-45;
+	line-height:$height-45;
 }
 .{$pf}tab-nav .current{
     color: #00a5e0;
     border-bottom: 2px #00a5e0 solid;
 }
-.{$pf}tab-content{
-	 // display: -webkit-box; 
-}
-
-
 .{$pf}tab-content > li {
-  // -webkit-box-flex: 1;
   width: 100%; }
 .{$pf}tab-content-hide{
 	display none;
