--- a/d-/styl/type.styl
+++ b/d-/styl/type.styl
@@ -3,19 +3,19 @@ a{
     color: $txt-link;  
 }
 h1{
-    font-size: $font-size-h1;
+    font-size:$font-size-18;
 }
 h2{
-    font-size: $font-size-title-lg;
+    font-size: $font-size-19;
 }
 h3,h4{
-    font-size: $font-size-title;
+    font-size: $font-size-16;
 }
 h5,.{$pf}txt-sub{
-    font-size: $font-size-sub;
+    font-size: $font-size-14;
 }
 h6,.{$pf}txt-tips{
-    font-size: $font-size-tips;
+    font-size: $font-size-12;
 }
 .{$pf}txt-default{
     color: $txt-default;
@@ -36,5 +36,5 @@ h6,.{$pf}txt-tips{
     color:#00a5e0;
 }
 .{$pf}txt-10{
-    font-size:0.5rem;
+    font-size:$font-size-10 !important;
 }
