--- a/index/base.css
+++ b/index/base.css
@@ -29,7 +29,6 @@ body {
   line-height: 1.5;
   font-size: 0.8rem;
   color: #212121;
-  background-color: #f5f5f5;
   outline: 0;
 }
 html,
@@ -218,7 +217,7 @@ img {
   overflow: hidden;
   margin: 0.5rem 0.5rem 1rem 0.5rem;
   background-color: #fff;
-  border-radius: 0.1rem;
+  border-radius: 2px;
 }
 .d-card-image img {
   width: 100%;
@@ -312,7 +311,7 @@ h2 {
 }
 h3,
 h4 {
-  font-size: 0.8rem;
+  font-size: $font-size-title;
 }
 h5,
 .d-txt-sub {
@@ -342,32 +341,32 @@ h6,
   color: #00a5e0;
 }
 .d-txt-10 {
-  font-size: 0.5rem !important;
+  font-size: 0.5rem;
 }
 .d-shadow-1 {
-  -webkit-box-shadow: 0 0.1rem 0.25rem 0 rgba(0,0,0,0.16), 0 0.1rem 0.5rem 0 rgba(0,0,0,0.12);
-  -moz-box-shadow: 0 0.1rem 0.25rem 0 rgba(0,0,0,0.16), 0 0.1rem 0.5rem 0 rgba(0,0,0,0.12);
-  box-shadow: 0 0.1rem 0.25rem 0 rgba(0,0,0,0.16), 0 0.1rem 0.5rem 0 rgba(0,0,0,0.12);
+  -webkit-box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12);
+  -moz-box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12);
+  box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12);
 }
 .d-shadow-2 {
-  webkit-box-shadow: 0 0.4rem 0.85rem 0 rgba(0,0,0,0.2), 0 0.3rem 1rem 0 rgba(0,0,0,0.19);
-  -moz-box-shadow: 0 0.4rem 0.85rem 0 rgba(0,0,0,0.2), 0 0.3rem 1rem 0 rgba(0,0,0,0.19);
-  box-shadow: 0 0.4rem 0.85rem 0 rgba(0,0,0,0.2), 0 0.3rem 1rem 0 rgba(0,0,0,0.19);
+  webkit-box-shadow: 0 8px 17px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+  -moz-box-shadow: 0 8px 17px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+  box-shadow: 0 8px 17px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
 }
 .d-shadow-3 {
-  -webkit-box-shadow: 0 0.6rem 0.75rem 0 rgba(0,0,0,0.24), 0 0.85rem 2.5rem 0 rgba(0,0,0,0.19);
-  -moz-box-shadow: 0 0.6rem 0.75rem 0 rgba(0,0,0,0.24), 0 0.85rem 2.5rem 0 rgba(0,0,0,0.19);
-  box-shadow: 0 0.6rem 0.75rem 0 rgba(0,0,0,0.24), 0 0.85rem 2.5rem 0 rgba(0,0,0,0.19);
+  -webkit-box-shadow: 0 12px 15px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+  -moz-box-shadow: 0 12px 15px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+  box-shadow: 0 12px 15px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
 .d-shadow-4 {
-  -webkit-box-shadow: 0 0.8rem 1.4rem 0 rgba(0,0,0,0.22), 0 0.25rem 2.75rem 0 rgba(0,0,0,0.21);
-  -moz-box-shadow: 0 0.8rem 1.4rem 0 rgba(0,0,0,0.22), 0 0.25rem 2.75rem 0 rgba(0,0,0,0.21);
-  box-shadow: 0 0.8rem 1.4rem 0 rgba(0,0,0,0.22), 0 0.25rem 2.75rem 0 rgba(0,0,0,0.21);
+  -webkit-box-shadow: 0 16px 28px 0 rgba(0,0,0,0.22), 0 25px 55px 0 rgba(0,0,0,0.21);
+  -moz-box-shadow: 0 16px 28px 0 rgba(0,0,0,0.22), 0 25px 55px 0 rgba(0,0,0,0.21);
+  box-shadow: 0 16px 28px 0 rgba(0,0,0,0.22), 0 25px 55px 0 rgba(0,0,0,0.21);
 }
 .d-shadow-5 {
-  -webkit-box-shadow: 0 1.35rem 0.2rem 0 rgba(0,0,0,0.2), 0 2rem 3.85rem 0 rgba(0,0,0,0.22);
-  -moz-box-shadow: 0 1.35rem 0.2rem 0 rgba(0,0,0,0.2), 0 2rem 3.85rem 0 rgba(0,0,0,0.22);
-  box-shadow: 0 1.35rem 0.2rem 0 rgba(0,0,0,0.2), 0 2rem 3.85rem 0 rgba(0,0,0,0.22);
+  -webkit-box-shadow: 0 27px 24px 0 rgba(0,0,0,0.2), 0 40px 77px 0 rgba(0,0,0,0.22);
+  -moz-box-shadow: 0 27px 24px 0 rgba(0,0,0,0.2), 0 40px 77px 0 rgba(0,0,0,0.22);
+  box-shadow: 0 27px 24px 0 rgba(0,0,0,0.2), 0 40px 77px 0 rgba(0,0,0,0.22);
 }
 .d-nowrap {
   max-width: 100%;
@@ -399,35 +398,12 @@ h6,
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 3;
 }
-.d-nowrap-1 {
-  display: -webkit-box;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  -webkit-box-orient: vertical;
-  -webkit-line-clamp: 1;
-  -webkit-box-flex: 1;
-  height: inherit;
-}
-.d-nowrap-2 {
-  display: -webkit-box;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  -webkit-box-orient: vertical;
-  -webkit-line-clamp: 2;
-}
-.d-nowrap-3 {
-  display: -webkit-box;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  -webkit-box-orient: vertical;
-  -webkit-line-clamp: 3;
-}
 .d-loading {
   width: 20px;
   height: 20px;
   display: block;
   background-image: url("../img/loading_sprite.png");
-  -webkit-background-size: auto 1rem;
+  -webkit-background-size: auto 20px;
   -webkit-animation: rotate 1s steps(12) infinite;
 }
 @-webkit-keyframes rotate {
@@ -459,8 +435,8 @@ h6,
   -webkit-box-orient: horizontal;
 }
 .d-loading-box {
-  top: 0;
-  left: 0;
+  top: 0px;
+  left: 0px;
   width: 6rem;
   height: 5rem;
   z-index: 999;
@@ -472,7 +448,7 @@ h6,
   -webkit-box-pack: center;
   background: rgba(0,0,0,0.65);
   color: #fff;
-  border-radius: 0.3rem;
+  border-radius: 6px;
 }
 @-webkit-keyframes rotate2 {
   from {
@@ -580,9 +556,6 @@ h6,
 .d-flex-col-50 {
   width: 50%;
 }
-.d-flex-col-60 {
-  width: 60%;
-}
 .d-flex-col-67 {
   width: 66.6666%;
 }
@@ -608,30 +581,30 @@ h6,
 }
 .d-tag {
   position: relative;
-  padding: 0.15rem;
+  padding: 3px;
   box-sizing: border-box;
 }
 .d-tag:before {
   position: absolute;
-  font-size: 0.5rem;
-  width: $height-28;
-  height: 0.65rem;
-  line-height: 0.65rem;
+  font-size: 10px;
+  width: 28px;
+  height: 13px;
+  line-height: 13px;
   z-index: 9;
   text-align: center;
 }
 .d-tag-b-r:before {
   position: absolute;
-  bottom: 0.15rem;
-  right: 0.15rem;
+  bottom: 3px;
+  right: 3px;
   color: #fff;
   background-color: #5fb336;
   content: '免费';
 }
 .d-tag-b-l:before {
   position: absolute;
-  bottom: 0.15rem;
-  left: 0.15rem;
+  bottom: 3px;
+  left: 3px;
   color: #fff;
   background-color: #5fb336;
   content: '免费';
@@ -639,16 +612,16 @@ h6,
 }
 .d-tag-t-r:before {
   position: absolute;
-  top: 0.15rem;
-  right: 0.15rem;
+  top: 3px;
+  right: 3px;
   color: #fff;
   background-color: #5fb336;
   content: '免费';
 }
 .d-tag-t-l:before {
   position: absolute;
-  top: 0.15rem;
-  left: 0.15rem;
+  top: 3px;
+  left: 3px;
   color: #fff;
   background-color: #5fb336;
   content: '免费';
@@ -663,22 +636,17 @@ h6,
   display: block;
   -webkit-background-size: cover;
   -webkit-border-radius: 10rem;
-  border-radius: 10rem;
-  background-size: cover;
   overflow: hidden;
 }
 .d-avatar-s-50 {
   display: block;
   -webkit-background-size: cover;
-  border-radius: 10rem;
-  background-size: cover;
   width: 2.5rem;
   height: 2.5rem;
 }
 .d-avatar-s-80 {
   display: block;
   -webkit-background-size: cover;
-  background-size: cover;
   width: 4rem;
   height: 4rem;
 }
@@ -705,8 +673,6 @@ h6,
   background-repeat: no-repeat;
   -webkit-background-size: cover;
   -webkit-border-radius: 10rem;
-  border-radius: 10rem;
-  background-size: cover;
 }
 .d-avatar-80 {
   width: 4rem;
@@ -727,7 +693,7 @@ h6,
   font-size: 0px;
   background-color: #e2e2e2;
   box-sizing: border-box;
-  margin: 0.25rem 0;
+  margin: 5px 0px;
 }
 .d-progress .d-progress-inner-50 {
   display: block;
@@ -791,10 +757,10 @@ h6,
   line-height: 1.3rem;
 }
 .d-dialog-content {
-  min-height: 3.55rem;
-  border-top-left-radius: 0.3rem;
-  border-top-right-radius: 0.3rem;
-  padding: 0.9rem;
+  min-height: 71px;
+  border-top-left-radius: 6px;
+  border-top-right-radius: 6px;
+  padding: 18px;
   display: -webkit-box;
   display: box;
   -webkit-box-pack: center;
@@ -802,8 +768,8 @@ h6,
   -webkit-box-orient: vertical;
 }
 .d-dialog-footer {
-  border-bottom-left-radius: 0.3rem;
-  border-bottom-right-radius: 0.3rem;
+  border-bottom-left-radius: 6px;
+  border-bottom-right-radius: 6px;
   display: -webkit-box;
   width: 100%;
   box-sizing: border-box;
@@ -934,13 +900,12 @@ h6,
   border: 0px;
   outline: none;
   padding-left: 1rem;
-  color: #333;
 }
 .d-search .cancel {
   font-size: 0.7rem;
   color: #666;
   margin-right: -2.2rem;
-  width: $width-44;
+  width: 2.2rem;
   height: 1.5rem;
   line-height: 1.5rem;
   -webkit-transition: all 0.3s;
@@ -1014,7 +979,7 @@ h6,
   color: #fff;
 }
 .d-form-item textarea {
-  height: 3.25rem;
+  height: 65px;
   font-size: 0.7rem;
   box-sizing: border-box;
   -webkit-appearance: none;
@@ -1035,19 +1000,19 @@ h6,
 }
 .d-radio input {
   display: inline-block;
-  width: 1.3rem;
-  height: 1.3rem;
+  width: 26px;
+  height: 26px;
   position: relative;
   overflow: visible;
   border: 0;
   background: none;
   -webkit-appearance: none;
   outline: none;
-  margin-right: 0.4rem;
+  margin-right: 8px;
   vertical-align: middle;
 }
 .d-radio {
-  line-height: 1.25rem;
+  line-height: 25px;
   display: inline-block;
 }
 .d-radio-label {
@@ -1055,44 +1020,44 @@ h6,
 }
 .d-radio input {
   display: inline-block;
-  width: 1.3rem;
-  height: 1.3rem;
+  width: 26px;
+  height: 26px;
   position: relative;
   overflow: visible;
   border: 0;
   background: none;
   -webkit-appearance: none;
   outline: none;
-  margin-right: 0.4rem;
-  margin-left: 0.4rem;
+  margin-right: 8px;
+  margin-left: 8px;
   vertical-align: middle;
 }
 .d-radio input:before {
   content: '';
   display: block;
-  width: 1.2rem;
-  height: 1.2rem;
+  width: 24px;
+  height: 24px;
   border: 1px solid #dfe0e1;
-  border-radius: 0.65rem;
+  border-radius: 13px;
   background-clip: padding-box;
   position: absolute;
-  left: 0;
+  left: 0px;
   top: 0;
 }
 .d-radio input:checked:after {
   content: '';
   display: block;
-  width: 0.7rem;
-  height: 0.7rem;
+  width: 14px;
+  height: 14px;
   background: #18b4ed;
-  border-radius: 0.35rem;
+  border-radius: 7px;
   position: absolute;
-  left: 0.3rem;
-  top: 0.3rem;
+  left: 6px;
+  top: 6px;
 }
 .d-form-footer {
-  border-bottom-left-radius: 0.3rem;
-  border-bottom-right-radius: 0.3rem;
+  border-bottom-left-radius: 6px;
+  border-bottom-right-radius: 6px;
   display: -webkit-box;
   width: 100%;
   box-sizing: border-box;
@@ -1127,14 +1092,14 @@ h6,
   display: flex;
   box-sizing: border-box;
   background-color: #fff;
-  height: 2.25rem;
+  height: 45px;
 }
 .d-tab-nav li {
   display-flex: 1;
   width: 100%;
   text-align: center;
-  height: 2.25rem;
-  line-height: 2.25rem;
+  height: 45px;
+  line-height: 45px;
 }
 .d-tab-nav .current {
   color: #00a5e0;
@@ -1148,6 +1113,7 @@ h6,
 }
 .d-list {
   background-color: #fff;
+  margin-bottom: 1rem;
   width: 100%;
 }
 .d-list-content {
@@ -1175,7 +1141,7 @@ h6,
   margin: 0 0.05rem;
 }
 .d-list li {
-  padding: 0.25rem 0;
+  padding: 0.25rem;
   position: relative;
 }
 .d-list-info {
@@ -1191,7 +1157,7 @@ h6,
   box-pack: center;
 }
 .d-list-txt {
-  font-size: 0.7rem;
+  font-size: 0.65rem;
   color: #5f646e;
   line-height: 1rem;
   position: relative;
@@ -1233,9 +1199,9 @@ h6,
   right: 0;
   left: 0;
   z-index: 10;
-  height: 2.25rem;
-  line-height: 2.25rem;
-  background-color: #ff7f00;
+  height: 2.2rem;
+  line-height: 2.2rem;
+  background-color: #18b4ed;
   color: #fff;
   display: -webkit-box;
   display: -webkit-flex;
@@ -1254,13 +1220,13 @@ h6,
   line-height: 1.3rem;
   min-width: 2.75rem;
   text-align: center;
-  font-size: 0.75rem;
+  font-size: 15px;
   background-color: #fdfdfd;
   color: #00a5e0;
   -webkit-box-sizing: border-box;
   background-clip: padding-box;
   border: 0;
-  border-radius: 0.15rem;
+  border-radius: 3px;
   position: relative;
 }
 .d-nav button:after {
@@ -1296,8 +1262,6 @@ h6,
   display: inline-block;
   padding: 0 0.125rem;
   line-height: 0.8rem;
-  height: 0.8rem;
-  width: 0.8rem;
   text-align: center;
 }
 .d-nav-btn {
@@ -1320,7 +1284,7 @@ h6,
   line-height: 1.3rem;
   min-width: 2.75rem;
   text-align: center;
-  font-size: 0.75rem;
+  font-size: 15px;
   -webkit-box-sizing: border-box;
   background-clip: padding-box;
   position: relative;
@@ -1342,7 +1306,7 @@ h6,
 }
 .d-btn-nav-img {
   position: absolute;
-  left: 0.5rem;
+  left: 10px;
 }
 .d-nav-btn button:active {
   background-color: #fdfdfd !important;
@@ -1359,14 +1323,14 @@ h6,
   display: inline-block;
   position: relative;
   text-align: center;
-  font-size: 0.75rem;
+  font-size: 15px;
   background-color: #fdfdfd;
   background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0.5, #fff), to(#fafafa));
   color: #00a5e0;
   -webkit-box-sizing: border-box;
   background-clip: padding-box;
   border: 1px solid #cacccd;
-  border-radius: 0.15rem;
+  border-radius: 3px;
 }
 @media screen and (-webkit-min-device-pixel-ratio: 2) {
   .d-btn,
@@ -1398,8 +1362,8 @@ h6,
 .d-btn:after {
   content: "";
   position: absolute;
-  top: -$btn-top;
-  bottom: -$btn-top;
+  top: -$btn-hot-area;
+  bottom: -$btn-hot-area;
   left: 0;
   right: 0;
 }
@@ -1491,8 +1455,8 @@ h6,
   }
 }
 .d-container {
-  padding-right: 0.75rem;
-  padding-left: 0.75rem;
+  padding-right: 15px;
+  padding-left: 15px;
   margin-right: auto;
   margin-left: auto;
 }
@@ -1557,8 +1521,8 @@ h6,
 .d-col-lg-12 {
   position: relative;
   min-height: 1px;
-  padding-right: 0.75rem;
-  padding-left: 0.75rem;
+  padding-right: 15px;
+  padding-left: 15px;
 }
 .d-col-xs-1,
 .d-col-xs-2,
@@ -2340,6 +2304,8 @@ h6,
 }
 .d-grid-link:active {
   background-color: #fdfdfd;
+  width: 50%;
+  margin: 0 auto;
 }
 .d-text-align-c {
   text-align: center;
@@ -2368,9 +2334,6 @@ h6,
 .d-margin-r-10 {
   margin-right: 0.5rem;
 }
-.d-margin-r-20 {
-  margin-right: 1rem;
-}
 .d-margin-t-50 {
   margin-top: 2.5rem;
 }
@@ -2379,12 +2342,6 @@ h6,
 }
 .d-margin-t-5 {
   margin-top: 0.25rem;
-}
-.d-margin-b-10 {
-  margin-bottom: 0.5rem;
-}
-.d-margin-tb-10 {
-  margin: 0.5rem 0;
 }
 .d-margin-r-1 {
   margin-right: 0.05rem;
@@ -2403,9 +2360,6 @@ h6,
 }
 .d-padding-l-10 {
   padding-left: 0.5rem;
-}
-.d-padding-r-3 {
-  padding-right: 0.15rem;
 }
 .d-padding-r-0 {
   padding-right: 0;
@@ -2429,10 +2383,10 @@ h6,
   padding: 0.5rem 0;
 }
 .d-width-8 {
-  width: 0.4rem !important;
+  width: 8px !important;
 }
 .d-width-20 {
-  width: 1rem;
+  width: 20px;
 }
 .d-fill {
   object-fit: fill;
@@ -2474,27 +2428,6 @@ h6,
 }
 .d-position-more {
   position: absolute;
-  bottom: 0.45rem;
-  left: 29%;
-}
-.d-b-radius-10 {
-  -webkit-border-radius: 0.5rem !important;
-  border-radius: 0.5rem !important;
-}
-.d-rec {
-  border-left: 0.15rem solid #ff7f00;
-  padding-left: 0.25rem;
-  margin-bottom: 0.5rem;
-}
-.d-p-left-58 {
-  left: 58% !important;
-}
-.d-txt-orange {
-  color: #ff7f00;
-}
-.d-tip {
-  font-weight: bold;
-}
-.d-bg-f {
-  background-color: #fff;
+  bottom: 0.5rem;
+  left: 31%;
 }
