--- a/d-/css/flex.css
+++ b/d-/css/flex.css
@@ -15,14 +15,29 @@
 }
 .d-align-items-c {
   align-items: center;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
 }
 .d-justify-content {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
   -webkit-justify-content: space-between;
   justify-content: space-between;
 }
 .d-justify-content-c {
   -webkit-justify-content: center;
   justify-content: center;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
 }
 .d-justify-content-end {
   -webkit-justify-content: flex-end;
@@ -101,6 +116,9 @@
 }
 .d-flex-col-67 {
   width: 66.6666%;
+}
+.d-flex-col-70 {
+  width: 70%;
 }
 .d-flex-col-75 {
   width: 75%;
