--- a/d-/styl/flex.styl
+++ b/d-/styl/flex.styl
@@ -17,15 +17,30 @@
 
 .{$pf}align-items-c{
     align-items:center;
+    display:-webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex; 
 }
 
 .{$pf}justify-content{
+    display:-webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex; 
   -webkit-justify-content:space-between;
   justify-content:space-between;
   }
   .{$pf}justify-content-c{
   -webkit-justify-content:center;
   justify-content:center;
+   display:-webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
   }
   .{$pf}justify-content-end{
   -webkit-justify-content:flex-end;
@@ -106,6 +121,8 @@
 
 .{$pf}flex-col-67 {
   width: 66.6666%; }
+  .{$pf}flex-col-70 {
+  width: 70%; }
 
 .{$pf}flex-col-75 {
   width: 75%; }
