--- a/d-/styl/header.styl
+++ b/d-/styl/header.styl
@@ -96,7 +96,7 @@
     z-index: 10;
     height: $height-44;
     line-height $height-44;
-    background-color: #18b4ed;
+    background-color: $header-bg-orange;
     color:#fff;
     display -webkit-box;
     display -webkit-flex;
@@ -114,7 +114,7 @@
     -webkit-box-sizing: border-box;
     background-clip: padding-box;
      position:relative;  
-    background-color: #18b4ed !important;
+    background-color: $header-bg-orange !important;
     color: #fdfdfd !important;
     border: 1px solid #fff;
     
