--- a/d-/styl/label.styl
+++ b/d-/styl/label.styl
@@ -12,6 +12,19 @@
 	vertical-align: baseline;/*默认。元素放置在父元素的基线上。*/
 	border-radius:$boeder-r-3;
 }
+.{$pf}label-skill{
+	display: inline-block;
+	padding: 0.3rem 0.5rem;
+	font-size: 0.6rem;
+	line-height: 1;
+	color: #616161;
+   background-color: #e0e0e0;
+	text-align: center;
+	white-space: nowrap;
+	vertical-align: baseline;/*默认。元素放置在父元素的基线上。*/
+	border-radius:$boeder-r-200;
+}
+
 .{$pf}label-primary {
 	_label_($txt-color-f,#00bcd4);
 }
