--- a/d-/styl/shadow.styl
+++ b/d-/styl/shadow.styl
@@ -1,9 +1,14 @@
 // @import "mixin.styl"
 @import "variable.styl"
+.a{
+     -webkit-box-shadow-bottom: 0 0.1rem 0.25rem 0 rgba(0, 0, 0, 0.16), 0 0.1rem 0.5rem 0 rgba(0, 0, 0, 0.12);
+    -moz-box-shadow-bottom: 0 0.05rem 0.25rem 0 rgba(0, 0, 0, 0.16), 0 0.1rem 0.5rem 0 rgba(0, 0, 0, 0.12);
+    box-shadow-bottom: 0 0.05rem 0.25rem 0 rgba(0, 0, 0, 0.16), 0 0.05rem 0.5rem 0 rgba(0, 0, 0, 0.12);
+}
 .{$pf}shadow-1{
-	 -webkit-box-shadow: 0 0.1rem 0.25rem 0 rgba(0, 0, 0, 0.16), 0 0.1rem 0.5rem 0 rgba(0, 0, 0, 0.12);
-    -moz-box-shadow: 0 0.1rem 0.25rem 0 rgba(0, 0, 0, 0.16), 0 0.1rem 0.5rem 0 rgba(0, 0, 0, 0.12);
-    box-shadow: 0 0.1rem 0.25rem 0 rgba(0, 0, 0, 0.16), 0 0.1rem 0.5rem 0 rgba(0, 0, 0, 0.12);
+	 -webkit-box-shadow: 0 0.05rem 0.05rem 0 rgba(0, 0, 0, 0.12);
+    -moz-box-shadow: 0 0.05rem 0.05rem 0 rgba(0, 0, 0, 0.12);
+    box-shadow: 0 0.05rem 0.05rem 0 rgba(0, 0, 0, 0.12);
 }
 .{$pf}shadow-2{
 	 webkit-box-shadow: 0 0.4rem 0.85rem 0 rgba(0, 0, 0, 0.2), 0 0.3rem 1rem 0 rgba(0, 0, 0, 0.19);
