--- a/d-/styl/type.styl
+++ b/d-/styl/type.styl
@@ -17,6 +17,9 @@ h5,.{$pf}txt-sub{
 h6,.{$pf}txt-tips{
     font-size: $font-size-12;
 }
+.{$pf}font-12{
+     font-size: $font-size-12;
+}
 .{$pf}txt-default{
     color: $txt-default;
 }
