--- a/d-/css/base.css
+++ b/d-/css/base.css
@@ -254,6 +254,18 @@ img {
   vertical-align: baseline; /*默认。元素放置在父元素的基线上。*/
   border-radius: 0.15rem;
 }
+.d-label-skill {
+  display: inline-block;
+  padding: 0.3rem 0.5rem;
+  font-size: 0.6rem;
+  line-height: 1;
+  color: #616161;
+  background-color: #e0e0e0;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: baseline; /*默认。元素放置在父元素的基线上。*/
+  border-radius: 10rem;
+}
 .d-label-primary {
   color: #fff;
   background-color: #00bcd4;
@@ -322,6 +334,9 @@ h6,
 .d-txt-tips {
   font-size: 0.6rem;
 }
+.d-font-12 {
+  font-size: 0.6rem;
+}
 .d-txt-default {
   color: #000;
 }
@@ -344,10 +359,15 @@ h6,
 .d-txt-10 {
   font-size: 0.5rem !important;
 }
+.a {
+  -webkit-box-shadow-bottom: 0 0.1rem 0.25rem 0 rgba(0,0,0,0.16), 0 0.1rem 0.5rem 0 rgba(0,0,0,0.12);
+  -moz-box-shadow-bottom: 0 0.05rem 0.25rem 0 rgba(0,0,0,0.16), 0 0.1rem 0.5rem 0 rgba(0,0,0,0.12);
+  box-shadow-bottom: 0 0.05rem 0.25rem 0 rgba(0,0,0,0.16), 0 0.05rem 0.5rem 0 rgba(0,0,0,0.12);
+}
 .d-shadow-1 {
-  -webkit-box-shadow: 0 0.1rem 0.25rem 0 rgba(0,0,0,0.16), 0 0.1rem 0.5rem 0 rgba(0,0,0,0.12);
-  -moz-box-shadow: 0 0.1rem 0.25rem 0 rgba(0,0,0,0.16), 0 0.1rem 0.5rem 0 rgba(0,0,0,0.12);
-  box-shadow: 0 0.1rem 0.25rem 0 rgba(0,0,0,0.16), 0 0.1rem 0.5rem 0 rgba(0,0,0,0.12);
+  -webkit-box-shadow: 0 0.05rem 0.05rem 0 rgba(0,0,0,0.12);
+  -moz-box-shadow: 0 0.05rem 0.05rem 0 rgba(0,0,0,0.12);
+  box-shadow: 0 0.05rem 0.05rem 0 rgba(0,0,0,0.12);
 }
 .d-shadow-2 {
   webkit-box-shadow: 0 0.4rem 0.85rem 0 rgba(0,0,0,0.2), 0 0.3rem 1rem 0 rgba(0,0,0,0.19);
@@ -499,14 +519,29 @@ h6,
 }
 .d-align-items-c {
   align-items: center;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
 }
 .d-justify-content {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
   -webkit-justify-content: space-between;
   justify-content: space-between;
 }
 .d-justify-content-c {
   -webkit-justify-content: center;
   justify-content: center;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
 }
 .d-justify-content-end {
   -webkit-justify-content: flex-end;
@@ -585,6 +620,9 @@ h6,
 }
 .d-flex-col-67 {
   width: 66.6666%;
+}
+.d-flex-col-70 {
+  width: 70%;
 }
 .d-flex-col-75 {
   width: 75%;
@@ -1199,7 +1237,6 @@ h6,
   text-overflow: ellipsis;
   -webkit-box-orient: vertical;
   display: -webkit-box;
-  padding-left: 0.125rem;
 }
 .d-list-txt-clamp-2 {
   -webkit-line-clamp: 2;
@@ -1307,7 +1344,7 @@ h6,
   z-index: 10;
   height: 2.2rem;
   line-height: 2.2rem;
-  background-color: #18b4ed;
+  background-color: #ff7f00;
   color: #fff;
   display: -webkit-box;
   display: -webkit-flex;
@@ -1324,7 +1361,7 @@ h6,
   -webkit-box-sizing: border-box;
   background-clip: padding-box;
   position: relative;
-  background-color: #18b4ed !important;
+  background-color: #ff7f00 !important;
   color: #fdfdfd !important;
   border: 1px solid #fff;
 }
@@ -1557,8 +1594,6 @@ h6,
 .d-col-lg-12 {
   position: relative;
   min-height: 1px;
-  padding-right: 0.75rem;
-  padding-left: 0.75rem;
 }
 .d-col-xs-1,
 .d-col-xs-2,
@@ -1577,55 +1612,42 @@ h6,
 }
 .d-col-xs-0 {
   width: 0%;
-  padding: 0.125rem;
 }
 .d-col-xs-1 {
   width: 8.333333333333334%;
-  padding: 0.125rem;
 }
 .d-col-xs-2 {
   width: 16.666666666666668%;
-  padding: 0.125rem;
 }
 .d-col-xs-3 {
   width: 25%;
-  padding: 0.125rem;
 }
 .d-col-xs-4 {
   width: 33.333333333333336%;
-  padding: 0.125rem;
 }
 .d-col-xs-5 {
   width: 41.66666666666667%;
-  padding: 0.125rem;
 }
 .d-col-xs-6 {
   width: 50%;
-  padding: 0.125rem;
 }
 .d-col-xs-7 {
   width: 58.333333333333336%;
-  padding: 0.125rem;
 }
 .d-col-xs-8 {
   width: 66.66666666666667%;
-  padding: 0.125rem;
 }
 .d-col-xs-9 {
   width: 75%;
-  padding: 0.125rem;
 }
 .d-col-xs-10 {
   width: 83.33333333333334%;
-  padding: 0.125rem;
 }
 .d-col-xs-11 {
   width: 91.66666666666667%;
-  padding: 0.125rem;
 }
 .d-col-xs-12 {
   width: 100%;
-  padding: 0.125rem;
 }
 .d-col-xs-pull-0 {
   right: 0%;
@@ -1761,55 +1783,42 @@ h6,
   }
   .d-col-sm-0 {
     width: 0%;
-    padding: 0.125rem;
   }
   .d-col-sm-1 {
     width: 8.333333333333334%;
-    padding: 0.125rem;
   }
   .d-col-sm-2 {
     width: 16.666666666666668%;
-    padding: 0.125rem;
   }
   .d-col-sm-3 {
     width: 25%;
-    padding: 0.125rem;
   }
   .d-col-sm-4 {
     width: 33.333333333333336%;
-    padding: 0.125rem;
   }
   .d-col-sm-5 {
     width: 41.66666666666667%;
-    padding: 0.125rem;
   }
   .d-col-sm-6 {
     width: 50%;
-    padding: 0.125rem;
   }
   .d-col-sm-7 {
     width: 58.333333333333336%;
-    padding: 0.125rem;
   }
   .d-col-sm-8 {
     width: 66.66666666666667%;
-    padding: 0.125rem;
   }
   .d-col-sm-9 {
     width: 75%;
-    padding: 0.125rem;
   }
   .d-col-sm-10 {
     width: 83.33333333333334%;
-    padding: 0.125rem;
   }
   .d-col-sm-11 {
     width: 91.66666666666667%;
-    padding: 0.125rem;
   }
   .d-col-sm-12 {
     width: 100%;
-    padding: 0.125rem;
   }
   .d-col-sm-pull-0 {
     right: 0%;
@@ -1946,55 +1955,42 @@ h6,
   }
   .d-col-md-0 {
     width: 0%;
-    padding: 0.125rem;
   }
   .d-col-md-1 {
     width: 8.333333333333334%;
-    padding: 0.125rem;
   }
   .d-col-md-2 {
     width: 16.666666666666668%;
-    padding: 0.125rem;
   }
   .d-col-md-3 {
     width: 25%;
-    padding: 0.125rem;
   }
   .d-col-md-4 {
     width: 33.333333333333336%;
-    padding: 0.125rem;
   }
   .d-col-md-5 {
     width: 41.66666666666667%;
-    padding: 0.125rem;
   }
   .d-col-md-6 {
     width: 50%;
-    padding: 0.125rem;
   }
   .d-col-md-7 {
     width: 58.333333333333336%;
-    padding: 0.125rem;
   }
   .d-col-md-8 {
     width: 66.66666666666667%;
-    padding: 0.125rem;
   }
   .d-col-md-9 {
     width: 75%;
-    padding: 0.125rem;
   }
   .d-col-md-10 {
     width: 83.33333333333334%;
-    padding: 0.125rem;
   }
   .d-col-md-11 {
     width: 91.66666666666667%;
-    padding: 0.125rem;
   }
   .d-col-md-12 {
     width: 100%;
-    padding: 0.125rem;
   }
   .d-col-md-pull-0 {
     right: 0%;
@@ -2131,55 +2127,42 @@ h6,
   }
   .d-col-lg-0 {
     width: 0%;
-    padding: 0.125rem;
   }
   .d-col-lg-1 {
     width: 8.333333333333334%;
-    padding: 0.125rem;
   }
   .d-col-lg-2 {
     width: 16.666666666666668%;
-    padding: 0.125rem;
   }
   .d-col-lg-3 {
     width: 25%;
-    padding: 0.125rem;
   }
   .d-col-lg-4 {
     width: 33.333333333333336%;
-    padding: 0.125rem;
   }
   .d-col-lg-5 {
     width: 41.66666666666667%;
-    padding: 0.125rem;
   }
   .d-col-lg-6 {
     width: 50%;
-    padding: 0.125rem;
   }
   .d-col-lg-7 {
     width: 58.333333333333336%;
-    padding: 0.125rem;
   }
   .d-col-lg-8 {
     width: 66.66666666666667%;
-    padding: 0.125rem;
   }
   .d-col-lg-9 {
     width: 75%;
-    padding: 0.125rem;
   }
   .d-col-lg-10 {
     width: 83.33333333333334%;
-    padding: 0.125rem;
   }
   .d-col-lg-11 {
     width: 91.66666666666667%;
-    padding: 0.125rem;
   }
   .d-col-lg-12 {
     width: 100%;
-    padding: 0.125rem;
   }
   .d-col-lg-pull-0 {
     right: 0%;
@@ -2368,6 +2351,9 @@ h6,
 .d-margin-r-10 {
   margin-right: 0.5rem;
 }
+.d-margin-r-5 {
+  margin-right: 0.25rem;
+}
 .d-margin-r-20 {
   margin-right: 1rem;
 }
@@ -2375,10 +2361,13 @@ h6,
   margin-top: 2.5rem;
 }
 .d-margin-t-10 {
-  margin-top: 0.5rem;
+  margin-top: 0.5rem !important;
 }
 .d-margin-t-5 {
   margin-top: 0.25rem;
+}
+.d-margin-b-5 {
+  margin-bottom: 0.25rem;
 }
 .d-margin-b-10 {
   margin-bottom: 0.5rem;
@@ -2401,6 +2390,9 @@ h6,
 .d-padding-lr-10 {
   padding: 0 0.5rem;
 }
+.d-padding-lr-20 {
+  padding: 0 1rem;
+}
 .d-padding-l-10 {
   padding-left: 0.5rem;
 }
@@ -2417,7 +2409,7 @@ h6,
   padding: 1rem 0;
 }
 .d-padding-t-10 {
-  padding-top: 0.5rem;
+  padding-top: 0.5rem !important;
 }
 .d-padding-t-20 {
   padding-top: 1rem;
@@ -2426,13 +2418,16 @@ h6,
   padding: 0.25rem 0;
 }
 .d-padding-tb-10 {
-  padding: 0.5rem 0;
+  padding: 0.5rem 0 !important;
 }
 .d-width-8 {
   width: 0.4rem !important;
 }
 .d-width-20 {
   width: 1rem;
+}
+.d-height-40 {
+  height: 2rem;
 }
 .d-fill {
   object-fit: fill;
@@ -2474,7 +2469,7 @@ h6,
 }
 .d-position-more {
   position: absolute;
-  bottom: 0.45rem;
+  bottom: 0.5rem;
   left: 29%;
 }
 .d-b-radius-10 {
@@ -2489,12 +2484,24 @@ h6,
 .d-p-left-58 {
   left: 58% !important;
 }
+.d-p-left-0 {
+  left: 0% !important;
+}
 .d-txt-orange {
   color: #ff7f00;
+}
+.d-activity-state {
+  background-color: #9acd32;
+  color: #fff;
 }
 .d-tip {
   font-weight: bold;
 }
 .d-bg-f {
   background-color: #fff;
+}
+.d-nowrap-c {
+  width: 80%;
+  margin: 0 auto;
+  text-align: center;
 }
