--- a/d-/css/label.css
+++ b/d-/css/label.css
@@ -10,6 +10,18 @@
   vertical-align: baseline; /*默认。元素放置在父元素的基线上。*/
   border-radius: 0.15rem;
 }
+.d-label-skill {
+  display: inline-block;
+  padding: 0.3rem 0.5rem;
+  font-size: 0.6rem;
+  line-height: 1;
+  color: #616161;
+  background-color: #e0e0e0;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: baseline; /*默认。元素放置在父元素的基线上。*/
+  border-radius: 10rem;
+}
 .d-label-primary {
   color: #fff;
   background-color: #00bcd4;
