--- a/d-/styl/grid.styl
+++ b/d-/styl/grid.styl
@@ -20,8 +20,8 @@
 .{$pf}col-xs-1, .{$pf}col-sm-1, .{$pf}col-md-1, .{$pf}col-lg-1, .{$pf}col-xs-2, .{$pf}col-sm-2, .{$pf}col-md-2, .{$pf}col-lg-2, .{$pf}col-xs-3, .{$pf}col-sm-3, .{$pf}col-md-3, .{$pf}col-lg-3, .{$pf}col-xs-4, .{$pf}col-sm-4, .{$pf}col-md-4, .{$pf}col-lg-4, .{$pf}col-xs-5, .{$pf}col-sm-5, .{$pf}col-md-5, .{$pf}col-lg-5, .{$pf}col-xs-6, .{$pf}col-sm-6, .{$pf}col-md-6, .{$pf}col-lg-6, .{$pf}col-xs-7, .{$pf}col-sm-7, .{$pf}col-md-7, .{$pf}col-lg-7, .{$pf}col-xs-8, .{$pf}col-sm-8, .{$pf}col-md-8, .{$pf}col-lg-8, .{$pf}col-xs-9, .{$pf}col-sm-9, .{$pf}col-md-9, .{$pf}col-lg-9, .{$pf}col-xs-10, .{$pf}col-sm-10, .{$pf}col-md-10, .{$pf}col-lg-10, .{$pf}col-xs-11, .{$pf}col-sm-11, .{$pf}col-md-11, .{$pf}col-lg-11, .{$pf}col-xs-12, .{$pf}col-sm-12, .{$pf}col-md-12, .{$pf}col-lg-12 {
   position: relative;
   min-height: 1px;
-  padding-right: $margin-15;
-  padding-left: $margin-15;
+  // padding-right: $margin-15;
+  // padding-left: $margin-15;
 }
 .{$pf}col-xs-1, .{$pf}col-xs-2, .{$pf}col-xs-3, .{$pf}col-xs-4, .{$pf}col-xs-5, .{$pf}col-xs-6, .{$pf}col-xs-7, .{$pf}col-xs-8, .{$pf}col-xs-9, .{$pf}col-xs-10, .{$pf}col-xs-11, .{$pf}col-xs-12 {
   float: left;
