--- a/d-/styl/avatar.styl
+++ b/d-/styl/avatar.styl
@@ -15,6 +15,14 @@
    width:$width-50;
   height: $height-50;
 }
+.{$pf}avatar-s-32{
+  display: block;
+  -webkit-background-size: cover;
+ //border-radius:$boeder-r-200;
+  background-size:cover;
+   width:$width-32;
+  height: $height-32;
+}
 .{$pf}avatar-s-80{
   display: block;
   -webkit-background-size: cover;
