--- a/d-/styl/basics.styl
+++ b/d-/styl/basics.styl
@@ -47,6 +47,9 @@
 .{$pf}margin-b-10{
   margin-bottom:$margin-10;
 }
+.{$pf}margin-b-20{
+  margin-bottom:$margin-20;
+}
 .{$pf}margin-tb-10{
    margin:$margin-10 0;
 }
@@ -55,6 +58,12 @@
 }
 .{$pf}padding-r-20{
 	padding-right:$margin-20;
+}
+.{$pf}padding-b-20{
+  padding-bottom:$margin-20;
+}
+.{$pf}padding-b-10{
+  padding-bottom:$margin-10;
 }
 .{$pf}padding-l-20{
 	padding-left:$margin-20;
@@ -95,6 +104,9 @@
 .{$pf}padding-tb-10{
   padding:$margin-10 0 !important;
 }
+.{$pf}padding-10{
+  padding:0.5rem !important;
+}
 .{$pf}width-8{
   width:$width-8 !important;
 }
@@ -134,6 +146,11 @@
     bottom: 0.5rem;
     left: 29%;
 }
+.{$pf}position-b-0{
+    position: absolute;
+    bottom: 0;
+}
+
 .{$pf}b-radius-10{
   -webkit-border-radius: 0.5rem !important;
     border-radius: 0.5rem !important;
@@ -141,7 +158,7 @@
 .{$pf}rec{
     border-left: 0.15rem solid $header-bg-orange;
     padding-left: 0.25rem;
-    margin-bottom: 0.5rem;
+    // margin-bottom: 0.5rem;
     }
 .{$pf}p-left-58{
        left:58% !important;     
@@ -169,4 +186,13 @@ background-color #fff;
     margin: 0 auto;
     text-align: center;
    
+}
+.{$pf}label-skill-tag{
+  position: absolute;
+    top: -0.3rem;
+    background-color: red;
+    border-radius: 1rem;
+    color: #fff;
+    padding: 0 0.2rem;
+    left: 64%;
 }
