--- a/d-/styl/btn.styl
+++ b/d-/styl/btn.styl
@@ -71,6 +71,9 @@
     background: #f2f2f2;
     color: rgba(0, 165, 224, 0.5);
 }
+.{$pf}btn-green{
+    background-color #9acd32 !important;
+}
 
 .{$pf}btn-primary{
     @extend .{$pf}btn;
