--- a/d-/styl/flex.styl
+++ b/d-/styl/flex.styl
@@ -41,7 +41,19 @@
     display: -ms-flexbox;
     display: -webkit-flex;
     display: flex;
+    align-items: center;//1109加的  筹款帖子
   }
+  // .{$pf}justify-content-center{
+  // -webkit-justify-content:center;
+  // justify-content:center;
+  //  display:-webkit-box;
+  //   display: -moz-box;
+  //   display: -ms-flexbox;
+  //   display: -webkit-flex;
+  //   display: flex;
+  //   align-items: center;
+  // }
+
   .{$pf}justify-content-end{
   -webkit-justify-content:flex-end;
   justify-content:flex-end;
@@ -58,6 +70,11 @@
     -webkit-box-align: center; 
 }
 .{$pf}flex-item-center{
+  display:-webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex; 
     -webkit-box-align: center;
     -moz-box-align:center;
     box-align:center;
