--- a/d-/styl/label.styl
+++ b/d-/styl/label.styl
@@ -23,6 +23,11 @@
 	white-space: nowrap;
 	vertical-align: baseline;/*默认。元素放置在父元素的基线上。*/
 	border-radius:$boeder-r-200;
+	margin-bottom:0.25rem;
+}
+.{$pf}label-skill:active{
+	background-color: #ff7f00;
+	color:#fff;
 }
 
 .{$pf}label-primary {
