--- a/d-/styl/nowrap.styl
+++ b/d-/styl/nowrap.styl
@@ -56,3 +56,10 @@
     -webkit-box-orient: vertical;
     -webkit-line-clamp: 3;
 }
+.{$pf}nowrap-4{
+    display: -webkit-box;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 4;
+}
