--- a/d-/css/nowrap.css
+++ b/d-/css/nowrap.css
@@ -52,3 +52,10 @@
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 3;
 }
+.d-nowrap-4 {
+  display: -webkit-box;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 4;
+}
